Docs: Mudando um pouco a estrutura do README.md e adicionando a logo do spring